# cookiecutters

./: .gitignore  Justfile  LICENSE  README.md  cookiecutter.json  make_symlinks.py  mkdocs.yml  pyproject.toml  yak.sh  zebra.sh
.github/: FUNDING.yml
.github/workflows/: test.yml
_common/: README.md
_hooks/: post_gen_project.sh
core/: cookiecutter.json
core/hooks/: post_gen_project.sh
core/{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Justfile  LICENSE  README.md  mkdocs.yml  poetry.toml  post_gen_project.sh  pyproject.toml
core/{{cookiecutter.project_slug}}/.github/: FUNDING.yml
core/{{cookiecutter.project_slug}}/.github/workflows/: pytest.yml
core/{{cookiecutter.project_slug}}/docs/: code_of_conduct.md  reference.md
core/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: cli.py
django/: cookiecutter.json
django/hooks/: post_gen_project.sh
django/{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  README.md  manage.py  mkdocs.yml  poetry.toml  pyproject.toml
django/{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/www/: asgi.py  settings.py  urls.py  wsgi.py
django/{{cookiecutter.project_slug}}/templates/: base.html
docs/: changelog.md  contributing.md  index.md
hooks/: post_gen_project.sh
src/projname/: cli.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Justfile  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: lint.yml
{{cookiecutter.project_slug}}/docs/: cli.md  code_of_conduct.md  index.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: cli.py
{{cookiecutter.project_slug}}/tests/: test_cli.py
{{cookiercutter.project_slug}}/: README.md  pyproject.toml
{{cookiercutter.project_slug}}/src/{{cookiercutter.project_slug}}/: cli.py
