[tool.poetry]
name = "projname"
version = "0.1.0"
description = "shortdesc"
authors = ["James Turk <dev@jamesturk.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jamesturk/projname/"
documentation = "https://jamesturk.github.io/projname/"
classifiers=[
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
projname = 'projname.cli:cli'

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.7.0"
structlog = "^22.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = "^4"
black = "^23"
mkdocs-material = "^9"
ruff = "^0.0.257"
# mkdocstrings = "^0.19.0"
# mkdocstrings-python = "^0.8.3"
# mypy = "^0.900"

# [tool.mypy]
# disallow_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
